--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-scaffold",
+  "name": "vue-qqmusic",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "494873674@qq.com",
@@ -13,7 +13,9 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "alloytouch": "^0.2.4",
     "base-64": "^0.1.0",
+    "css3transform": "^1.1.5",
     "hammerjs": "^2.0.8",
     "iscroll": "^5.2.0",
     "mint-ui": "^2.2.3",
@@ -22,7 +24,7 @@
     "tween.js": "^16.6.0",
     "utf8": "^2.1.2",
     "velocity-animate": "^1.5.0",
-    "vue": "^2.2.1",
+    "vue": "^2.3.3",
     "vue-awesome-swiper": "^2.4.2",
     "vue-router": "^2.2.0",
     "vuex": "^2.3.0"
