[misc]更新依赖包

--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^17.1.0",
     "alloytouch": "^0.2.4",
     "base-64": "^0.1.0",
     "css3transform": "^1.1.5",
     "hammerjs": "^2.0.8",
     "iscroll": "^5.2.0",
     "mint-ui": "^2.2.3",
-    "node-sass": "^4.5.2",
     "stackblur-canvas": "^1.4.0",
-    "tween.js": "^16.6.0",
     "utf8": "^2.1.2",
     "velocity-animate": "^1.5.0",
     "vue": "^2.3.3",
@@ -61,7 +60,7 @@
     "lolex": "^1.6.0",
     "mocha": "^3.4.2",
     "nightwatch": "^0.9.12",
-    "node-sass": "^4.5.0",
+    "node-sass": "^4.5.3",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
